--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
@@ -8,7 +7,7 @@ android {
     ndkVersion '22.0.7026061'
 
     defaultConfig {
-        applicationId "uz.quantic.bookpdf"
+        applicationId "uz.quantic.pdfrender"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -19,7 +18,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,7 +37,6 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
